fix: remove nav-bar css rule to fix urlbar visibility

--- a/data/runtime/firefox/profile/chrome/userChrome.css
+++ b/data/runtime/firefox/profile/chrome/userChrome.css
@@ -1,9 +1,8 @@
-#nav-bar, #identity-box, #tabbrowser-tabs, #TabsToolbar {
-	visibility: collapse;
-}
-
-#nav-bar * {
-    visibility: visible !important;
+#nav-bar,
+#identity-box,
+#tabbrowser-tabs,
+#TabsToolbar {
+    visibility: collapse !important;
 }
 
 /************************************/
@@ -123,5 +122,6 @@ https://github.com/stonecrusher/simpleMenuWizard
 /* Here are context menus of addons */
 
 
-#leave_this_dummy_here
-    { display:none !important; }
+#leave_this_dummy_here {
+    display: none !important;
+}
